Sanketika-Obsrv/issue-tracker#83: documentation fixes along with feedback fixes
