# api-service/docs/openapi.yml
@@ -27,7 +27,6 @@ paths:
         This API allows you to create new datasets used by the analytical data
         source.
       requestBody:
-        required: true
         content:
           application/json:
             schema:
@@ -463,7 +462,7 @@ paths:
                   value:
                     id: api.datasets.read
                     ver: v1
-                    ts: 1712060468710
+                    ts: 1712898827896
                     params:
                       status: SUCCESS
                       errmsg: ''
@@ -527,6 +526,29 @@ paths:
                       created_date: '2024-04-01T23:33:29.770Z'
                       updated_date: '2024-04-01T23:33:29.770Z'
                       published_date: null
+                      transformations_config:
+                        - field_key: eid
+                          transformation_function:
+                            type: mask
+                            expr: eid
+                            condition: null
+                          mode: Strict
+                          metadata:
+                            _transformationType: mask
+                            _transformedFieldDataType: string
+                            _transformedFieldSchemaType: string
+                            section: transformation
+                        - field_key: mid
+                          transformation_function:
+                            type: mask
+                            expr: mid
+                            condition: null
+                          mode: Strict
+                          metadata:
+                            _transformationType: mask
+                            _transformedFieldDataType: string
+                            _transformedFieldSchemaType: string
+                            section: transformation
                 example-1:
                   summary: Read Live dataset
                   value:
@@ -556,6 +578,7 @@ paths:
                       created_date: '2024-04-01T23:33:29.770Z'
                       updated_date: '2024-04-01T23:33:29.770Z'
                       published_date: '2024-04-01T23:33:29.770Z'
+                      transformations_config: []
                       version: 1
                 example-2:
                   summary: Read specific fields from the dataset
